--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ ui_MyForm.h
 # Ignorar archivos específicos
 Exercici-1
 Exercici-2
+Exercici-3
+Exercici-4
 Bloc1_Exemple
 Bloc2_Exemple
 Bloc3_Exemple
